Quorum3/Library/Tests/Actions/Pass/ReturnCast2ActionsNum.quorum
class Main
    action Main
        integer a = -2
        x = foo(a)
        output x
        output bar(x)
    end

    action foo (integer a) returns integer
        a = a * -1
        return a
    end

    action bar (integer a) returns number
        a = a * 10
        return a
    end
end