Quorum3/Library/Tests/Actions/Fail/IncorrectAssignment.quorum
class Main
    action Main
        integer x = foo(1)
        output x
    end

    action foo (integer a) returns number
        return a
    end

end